--- a/src/main/resources/tempplates/mgr/domain/detail.html
+++ b/src/main/resources/tempplates/mgr/domain/detail.html
@@ -56,8 +56,8 @@
 				  	<h3>budget control dimensions</h3>
 				</div>
 				<div class="row form-group budget-ctrl-dim" th:each="cds,cdsStat:${domain.ctrlDimSources}" th:attr="data-bind-code=${cds.dimcode}">
-				    <label class="col-xs-2 col-sm-2 col-md-2 col-lg-2 control-label label" th:text="${cds.dimname}" th:attr="data-bind-code=${cds.dimcode},data-bind-index=${cdsStat.index}"></label>
-				   	<div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 input-group">
+				    <label class="col-xs-2 col-sm-2 col-md-2 col-lg-2 control-label" th:text="${cds.dimname}" th:attr="data-bind-code=${cds.dimcode},data-bind-index=${cdsStat.index}"></label>
+				   	<div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 input-group p-l">
 						<span class="input-group-addon">
 							<input type="checkbox" class="ctrl-dim-enabled" th:name="${'ctrlDimSources[' + cdsStat.index + '].enabled'}" th:attr="data-bind-code=${cds.dimcode},checked=${cds.enabled}">
 						</span>
