--- a/src/main/resources/tempplates/mgr/form/design/index.html
+++ b/src/main/resources/tempplates/mgr/form/design/index.html
@@ -38,7 +38,7 @@
                 <div id="area_field_tree" />
 			</div>
 			<div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
-				<!-- <div th:replace="/fragments/spread::spread('spread')" /> -->
+				<!-- <div th:replace="/fragments/formspread::formspread('formspread')" /> -->
 			</div>
 		</div>
 	</div>
@@ -94,7 +94,7 @@
 			}
 		});                  
         
-		//var spreadContext = spread();
+		//var spreadContext = formspread();
 	});
 </script>
 </html>
