--- a/src/main/resources/tempplates/mgr/form/design/index.html
+++ b/src/main/resources/tempplates/mgr/form/design/index.html
@@ -17,28 +17,40 @@
 		<div class="row">
 			<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
 				<input type="hidden" name="currentFormid" th:value="${currentFormid}" />
-		        <div class="btn-group hierarchy-select" data-resize="auto" id="form_tree">
-                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                       	<span class="selected-label pull-left"></span>
-                        <span class="caret"></span>
-                        <span class="sr-only">Toggle Dropdown</span>
-                    </button>
-                    <div class="dropdown-menu open">
-                        <div class="hs-searchbox">
-                            <input type="text" class="form-control" autocomplete="off">
-                        </div>
-                        <ul class="dropdown-menu inner" role="menu">
-                        	<li th:each="node:${formTree}" th:attr="data-value=${node.value},data-level=${node.level}">
-                                <a th:href="@{/mgr/form/design/} + ${node.value}" th:text="${node.text}"></a>
-                        	</li>
-                        </ul>
-                    </div>
-                    <input class="hidden hidden-field" name="form_tree" readonly="readonly" aria-hidden="true" type="text"/>
-                </div>
-                <div id="area_field_tree" />
+				<div>
+			        <div class="btn-group hierarchy-select" data-resize="auto" id="form_tree">
+	                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+	                       	<span class="selected-label pull-left"></span>
+	                        <span class="caret"></span>
+	                        <span class="sr-only">Toggle Dropdown</span>
+	                    </button>
+	                    <div class="dropdown-menu open">
+	                        <div class="hs-searchbox">
+	                            <input type="text" class="form-control" autocomplete="off">
+	                        </div>
+	                        <ul class="dropdown-menu inner" role="menu">
+	                        	<li th:each="node:${formTree}" th:attr="data-value=${node.value},data-level=${node.level}">
+	                                <a th:href="@{/mgr/form/design/} + ${node.value}" th:text="${node.text}" class="nowrap"></a>
+	                        	</li>
+	                        </ul>
+	                    </div>
+	                    <input class="hidden hidden-field" name="form_tree" readonly="readonly" aria-hidden="true" type="text"/>
+	                </div>
+	                <div id="area_field_tree" />
+				</div>
+				<div>
+					<ul id="form_area_list" class="list-group">
+					  	<li class="list-group-item nowrap" th:each="area:${areas}" th:attr="data-value=${area.value}">
+					    	<span th:text="${area.text}"></span>
+					    	<span class="label-link hand">header</span>
+					    	<span class="label-link hand">body</span>
+					    	<span class="label-link hand">footer</span>
+					  	</li>
+					</ul>
+				</div>
 			</div>
 			<div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
-				<!-- <div th:replace="/fragments/formspread::formspread('formspread')" /> -->
+				<!-- <div th:replace="/fragments/fspread::fspread('fspread')" /> -->
 			</div>
 		</div>
 	</div>
@@ -55,11 +67,13 @@
 		var currentFormid = $('input[name="currentFormid"]').val()
 			, fieldTree = [[${areaFieldTree}]]
 			, nodeType = zyc.form.fieldTreeNodeType
-			, currSelectedFieldTreeNode = null;
+			, currSelectedFieldTreeNode = null
+			, emptyNodeType = [[${emptyNodeType}]]
+			, leftWidth = 300;
 		
         var $formTree = $('#form_tree').hierarchySelect({
-            width: 300,
-            emptyNodeValue: zyc.emptyNodeType.OPTIONAL.value,
+            width: leftWidth,
+            emptyNodeValue: 'optional',
             disabledLevels: [ 1 ],
             afterNodeClick: function(e) {
             	var href = $(this).attr('href');
@@ -67,7 +81,7 @@
                 	window.location = window.location.origin + href;	
             	}
             }
-        })
+        });
         
         if(currentFormid) {
             $formTree.hierarchySelect('setValue', currentFormid);	
@@ -76,7 +90,7 @@
 		var $areaFieldTree = $('#area_field_tree').treeview({
 			data: fieldTree,
 			showCheckbox: false, 
-			emptyIcon: 'glyphicon', 
+			emptyIcon: 'glyphicon',
 			onNodeExpanded: function(ctx, node) {
 				//code ...
 			},
@@ -91,10 +105,15 @@
 			},
 			onNodeUnselected: function(ctx, node) {
 				currSelectedFieldTreeNode = null;
+			},
+			onRendered: function() {
+				$areaFieldTree.addClass('nowrap').treeview('collapseAll', { silent: true });
 			}
-		});                  
-        
-		//var spreadContext = formspread();
+		}).width(leftWidth);
+		
+		$formAreaList = $('#form_area_list').width(leftWidth);
+		
+		//var fspreadContext = fspread();
 	});
 </script>
 </html>
