--- a/src/main/resources/tempplates/mgr/form/index.html
+++ b/src/main/resources/tempplates/mgr/form/index.html
@@ -18,7 +18,7 @@
 			<button type="button" id="btn_edit_form" class="btn btn-default limit-operate" th:attr="data-bind-href=@{/mgr/form/editpage}" title="编辑表单">编辑</button>
 			<button type="button" id="btn_del_form" class="btn btn-default limit-operate" th:attr="data-bind-href=@{/api/form/}" title="删除表单">删除</button>
 			<button type="button" id="btn_field_list" class="btn btn-default limit-operate" th:attr="data-bind-href=@{/mgr/form/field}" title="表单字段">表单字段</button>
-			<button type="button" id="btn_form_design" class="btn btn-default limit-operate" title="表单格式设计">格式设计</button>
+			<button type="button" id="btn_form_design" class="btn btn-default limit-operate" th:attr="data-bind-href=@{/mgr/form/design}" title="表单格式设计">格式设计</button>
 		</div>
 		<table id="table-forms"></table>
 	</div>
