--- a/src/main/resources/tempplates/mgr/form/design/index.html
+++ b/src/main/resources/tempplates/mgr/form/design/index.html
@@ -10,6 +10,20 @@
 <link type="text/css" rel="stylesheet" th:href="@{/bs-plugins/hierarchy-select/css/hierarchy-select.min.css}" ></link>
 <link type="text/css" rel="stylesheet" th:href="@{/bs-plugins/treeview/css/bootstrap-treeview.css}" ></link>
 <link type="text/css" rel="stylesheet" th:href="@{/zyc/css/zyc.css}"></link>
+<link type="text/css" rel="stylesheet" th:href="@{/spread/css/gc.spread.sheets.excel2016colorful.11.2.2.css}"></link>
+<style type="text/css">
+	@MEDIA screen and (max-height: 1000px) {
+		#fspread {
+			height: 900px;
+			width: 100%;
+		}
+		
+		#area_field_tree {
+			height: 880px;
+			overflow-y: auto;
+		}
+	}
+</style>
 </head>
 <body>
 	<div th:replace="/fragments/layout::header('login') " />
@@ -17,51 +31,50 @@
 		<div class="row">
 			<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
 				<input type="hidden" name="currentFormid" th:value="${currentFormid}" />
-				<div>
-			        <div class="btn-group hierarchy-select" data-resize="auto" id="form_tree">
-	                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-	                       	<span class="selected-label pull-left"></span>
-	                        <span class="caret"></span>
-	                        <span class="sr-only">Toggle Dropdown</span>
-	                    </button>
-	                    <div class="dropdown-menu open">
-	                        <div class="hs-searchbox">
-	                            <input type="text" class="form-control" autocomplete="off">
-	                        </div>
-	                        <ul class="dropdown-menu inner" role="menu">
-	                        	<li th:each="node:${formTree}" th:attr="data-value=${node.value},data-level=${node.level}">
-	                                <a th:href="@{/mgr/form/design/} + ${node.value}" th:text="${node.text}" class="nowrap"></a>
-	                        	</li>
-	                        </ul>
-	                    </div>
-	                    <input class="hidden hidden-field" name="form_tree" readonly="readonly" aria-hidden="true" type="text"/>
-	                </div>
-	                <div id="area_field_tree" />
-				</div>
-				<div>
-					<ul id="form_area_list" class="list-group">
-					  	<li class="list-group-item nowrap" th:each="area:${areas}" th:attr="data-value=${area.value}">
-					    	<span th:text="${area.text}"></span>
-					    	<span class="label-link hand">header</span>
-					    	<span class="label-link hand">body</span>
-					    	<span class="label-link hand">footer</span>
-					  	</li>
-					</ul>
-				</div>
+			    <div class="btn-group hierarchy-select" data-resize="auto" id="form_tree">
+                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                       	<span class="selected-label pull-left"></span>
+                        <span class="caret"></span>
+                        <span class="sr-only">Toggle Dropdown</span>
+                    </button>
+                    <div class="dropdown-menu open">
+                        <div class="hs-searchbox">
+                            <input type="text" class="form-control" autocomplete="off">
+                        </div>
+                        <ul class="dropdown-menu inner" role="menu">
+                        	<li th:each="node:${formTree}" th:attr="data-value=${node.value},data-level=${node.level}">
+                                <a th:href="@{/mgr/form/design/} + ${node.value}" th:text="${node.text}" class="nowrap"></a>
+                        	</li>
+                        </ul>
+                    </div>
+                    <input class="hidden hidden-field" name="form_tree" readonly="readonly" aria-hidden="true" type="text"/>
+                </div>
+                <div id="area_field_tree" ></div>
+				<!-- <ul id="form_area_list" class="list-group">
+				  	<li class="list-group-item nowrap" th:each="area:${areas}" th:attr="data-value=${area.value}">
+				    	<span th:text="${area.text}"></span>
+				    	<span class="label-link hand">header</span>
+				    	<span class="label-link hand">body</span>
+				    	<span class="label-link hand">footer</span>
+				  	</li>
+				</ul> -->
 			</div>
 			<div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
-				<!-- <div th:replace="/fragments/fspread::fspread('fspread')" /> -->
+				<div id="fspread"></div>
 			</div>
 		</div>
 	</div>
 	<div th:replace="/fragments/layout::footer" />
 </body>
 <script type="text/javascript" th:src="@{/jquery/jquery-3.3.1.min.js}" ></script>
+<!-- <script type="text/javascript" th:src="@{/zyc/js/zyc-jquery-load.js}"></script> -->
 <script type="text/javascript" th:src="@{/bs-3.3.7/js/bootstrap.min.js}" ></script>
 <script type="text/javascript" th:src="@{/bs-plugins/hierarchy-select/js/hierarchy-select.js}" ></script>
 <script type="text/javascript" th:src="@{/bs-plugins/treeview/js/bootstrap-treeview.js}" ></script>
 <script type="text/javascript" th:src="@{/zyc/js/zyc.js}" ></script>
 <script type="text/javascript" th:src="@{/zyc/js/zyc-form.js}" ></script>
+<script type="text/javascript" th:src="@{/spread/js/gc.spread.sheets.all.11.2.2.min.js}"></script>
+<script type="text/javascript" th:src="@{/zyc/js/zyc-fspread.js}" ></script>
 <script th:inline="javascript" type="text/javascript">
 	$(document).ready(function() {
 		var currentFormid = $('input[name="currentFormid"]').val()
@@ -111,9 +124,16 @@
 			}
 		}).width(leftWidth);
 		
-		$formAreaList = $('#form_area_list').width(leftWidth);
+		//$formAreaList = $('#form_area_list').width(leftWidth);
 		
-		//var fspreadContext = fspread();
+		var fsoptions = {
+			id: 'fspread',
+			workbook: {
+				sheetCount: 2
+			}
+		};
+		
+		var fs = fspread(fsoptions);
 	});
 </script>
 </html>
